--- a/Block_0/Assignments/1_a_Python.ipynb
+++ b/Block_0/Assignments/1_a_Python.ipynb
@@ -29,12 +29,204 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'add',\n",
+       " 'append',\n",
+       " 'delete',\n",
+       " 'show',\n",
+       " 'sort']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import MyModule\n",
+    "\n",
+    "dir(MyModule.ListKeeper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'add',\n",
+       " 'append',\n",
+       " 'delete',\n",
+       " 'dictio',\n",
+       " 'show',\n",
+       " 'sort']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myclass = MyModule.ListKeeper()\n",
+    "dir(myclass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'example': [1, 2, 3, 4, 5]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "myclass.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'example': [1, 2, 3, 4, 5], 'test': [1998, 120, 12, 15, 1, 5, 1052]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "myclass.add('test',[1998,120,12,15,1,5,1052])\n",
+    "myclass.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'test': [1998, 120, 12, 15, 1, 5, 1052]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "myclass.delete('example')\n",
+    "myclass.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 5, 12, 15, 120, 1052, 1998]\n",
+      "{'test': [1, 5, 12, 15, 120, 1052, 1998]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "myclass.sort('test')\n",
+    "myclass.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'test': [1, 5, 12, 15, 120, 1052, 1998, 520, 740, 860, 850]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "myclass.append('test',[520,740,860,850])\n",
+    "myclass.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import MySuperModule"
-   ]
+   "source": []
   }
  ],
  "metadata": {
