--- a/Block_0/Assignments/1_a_Python.ipynb
+++ b/Block_0/Assignments/1_a_Python.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -68,20 +68,20 @@
        " 'sort']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import MyModule\n",
+    "import MyModule #importing module containing LisKeeper class\n",
     "\n",
-    "dir(MyModule.ListKeeper)"
+    "dir(MyModule.ListKeeper) #Verify methods presence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -121,19 +121,19 @@
        " 'sort']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myclass = MyModule.ListKeeper()\n",
-    "dir(myclass)"
+    "myclass = MyModule.ListKeeper() #Creating an instance\n",
+    "dir(myclass) #Verify methods presence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,12 +145,12 @@
     }
    ],
    "source": [
-    "myclass.show()"
+    "myclass.show() #Show instance dictionnary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,13 +162,13 @@
     }
    ],
    "source": [
-    "myclass.add('test',[1998,120,12,15,1,5,1052])\n",
+    "myclass.add('test',[1998,120,12,15,1,5,1052]) #Add a new named list\n",
     "myclass.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,32 +180,31 @@
     }
    ],
    "source": [
-    "myclass.delete('example')\n",
+    "myclass.delete('example') #Delete a list by his name\n",
     "myclass.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 5, 12, 15, 120, 1052, 1998]\n",
       "{'test': [1, 5, 12, 15, 120, 1052, 1998]}\n"
      ]
     }
    ],
    "source": [
-    "myclass.sort('test')\n",
+    "myclass.sort('test') #Sort a list by ascending order\n",
     "myclass.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -217,8 +216,29 @@
     }
    ],
    "source": [
-    "myclass.append('test',[520,740,860,850])\n",
+    "myclass.append('test',[520,740,860,850]) #Append a list to an existing one\n",
     "myclass.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method append in module MyModule:\n",
+      "\n",
+      "append(name, extlist) method of MyModule.ListKeeper instance\n",
+      "    Method to append a list to an existing one\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(myclass.append)"
    ]
   },
   {
